@@ -127,4 +127,9 @@
     <cvs-directory>gdm2/docs</cvs-directory>
   </module>
 
+  <module id="gnomemeeting">
+    <cvs-directory>gnomemeeting/help</cvs-directory>
+    <cvs-branch>opal</cvs-branch>
+  </module>
+
 </gnomedocs>
