@@ -1,3 +1,7 @@
+2005-08-03  Danilo Šegan  <danilo@gnome.org>
+
+	* modules.xml: Add gnomemeeting (opal branch).
+
 2005-08-02  Danilo Šegan  <danilo@gnome.org>
 
 	* modules.xml: Added gdm2.
